# MMPHF-Experiments

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  comparison.cpp  runExperiments.sh
benchmark/: BenchmarkData.h  CentroidHollowTrieContender.h  Contender.h  DirectRankStoringContender.h  HollowTrieContender.h  PathDecomposedTrieContender.h
cpp/: CMakeLists.txt  comparison.cpp  generateData.cpp  plotData.cpp
cpp/benchmark/: BenchmarkData.h  CentroidHollowTrieContender.h  Contender.h  DirectRankStoringContender.h  HollowTrieContender.h  LeMonHashContender.h  LeMonHashVLContender.h  PathDecomposedTrieContender.h  RecursiveDirectRankStoringContender.h
cpp/benchmark/nonMonotone/: PTHashContender.h  SicHashContender.h
java/: pom.xml
java/src/main/java/com/bytehamster/mmphfexperiments/: Main.java
java/src/main/java/com/bytehamster/mmphfexperiments/benchmark/: BenchmarkData.java  Contender.java  HollowTrieContender.java  HollowTrieDistContender.java  IntStream.java  LcpContender.java  LongStream.java  PaCoTrieContender.java  Sux4jSetup.java  TwoStepsLcpContender.java  VLLcpContender.java  VLPaCoTrieContender.java  ZFastTrieDistributorContender.java
plots/: .gitignore  Makefile  construction.tex  createAxis.sh  pgf_header.tex  plots.bib  plots.tex  queries.tex
plots/data/: __competitorNames.txt  competitors.txt  trec-text.terms.txt  trec-title.terms.txt  uk-2007-05.urls.txt
scripts/dockerVolume/: __competitorNames.txt  normal-distribution.sh  normal-distribution.tex
